"Rate your mood" modal window z-index bug fixed

--- a/public/less/overrides.less
+++ b/public/less/overrides.less
@@ -325,7 +325,7 @@ a, a:hover {
     position: relative;
     float: right !important;
     margin: 0 -1px 0 0 !important;
-    z-index: 9999;
+    z-index: 10;
   }
 
   a {
