--- a/public/stylesheets/bootstrap.css
+++ b/public/stylesheets/bootstrap.css
@@ -4235,7 +4235,7 @@ a:hover {
   position: relative;
   float: right !important;
   margin: 0 -1px 0 0 !important;
-  z-index: 9999;
+  z-index: 10;
 }
 .nav-left-col a {
   width: 180px;
